# Fractal_Imaging

./: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  CMakeLists.txt  FractalCreator.cpp  FractalCreator.h  Fractal_Generator.cpp  Mandelbrot.cpp  Mandelbrot.h  RGB.cpp  RGB.h  Zoom.h  ZoomList.cpp  ZoomList.h
